--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.0.0",
   "description": "",
   "scripts": {
-    "start": "vite",
-    "dev": "vite",
+    "start": "concurrently \"vite\" \"nodemon server\"",
+    "dev": "pnpm run start",
     "build": "vite build",
     "serve": "vite preview"
   },
   "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^10.4.8",
+    "concurrently": "^7.3.0",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
     "typescript": "^4.8.2",
@@ -24,6 +25,7 @@
     "express-fileupload": "^1.4.0",
     "fals": "^1.0.3",
     "morgan": "^1.10.0",
+    "solid-icons": "^1.0.1",
     "solid-js": "^1.5.1",
     "zod": "^3.18.0"
   }
